Java 1.8 Kompatibilität